Update WhatsApp contact link in contact.html

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
       Message us directly on WhatsApp or email. We respond quickly to all enquiries.
     </p>
     <div class="actions">
-      <a href="https://wa.me/91XXXXXXXXXX" class="btn dark">Chat on WhatsApp</a>
+      <a href="https://wa.me/918851240897" class="btn dark">Chat on WhatsApp</a>
     </div>
   </div>
 </section>
