Update product sections and images in products.html

--- a/products.html
+++ b/products.html
@@ -19,27 +19,69 @@
 </nav>
 
 <section>
-  <h2>Our Products</h2>
-
+  <h2>Patches</h2>
   <div class="products">
     <div class="card">
-      <img src="https://via.placeholder.com/300" alt="Patches">
-      <p>Patches</p>
+      <img src="images/patches/lion.jpg" alt="Lion Patch">
+      <p>Lion Patch</p>
       <span>Contact for price</span>
     </div>
     <div class="card">
-      <img src="https://via.placeholder.com/300" alt="Laces">
-      <p>Laces</p>
+      <img src="images/patches/whale.jpg" alt="Whale Patch">
+      <p>Whale Patch</p>
       <span>Contact for price</span>
     </div>
     <div class="card">
-      <img src="https://via.placeholder.com/300" alt="Borders">
-      <p>Borders</p>
+      <img src="images/patches/flower.jpg" alt="Flower Patch">
+      <p>Flower Patch</p>
+      <span>Contact for price</span>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Borders</h2>
+  <div class="products">
+    <div class="card">
+      <img src="images/borders/gold.jpg" alt="Gold Border">
+      <p>Gold Border</p>
       <span>Contact for price</span>
     </div>
     <div class="card">
-      <img src="https://via.placeholder.com/300" alt="Boutique Items">
-      <p>Boutique Items</p>
+      <img src="images/borders/silver.jpg" alt="Silver Border">
+      <p>Silver Border</p>
+      <span>Contact for price</span>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Laces</h2>
+  <div class="products">
+    <div class="card">
+      <img src="images/laces/red.jpg" alt="Red Lace">
+      <p>Red Lace</p>
+      <span>Contact for price</span>
+    </div>
+    <div class="card">
+      <img src="images/laces/black.jpg" alt="Black Lace">
+      <p>Black Lace</p>
+      <span>Contact for price</span>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Boutique Items</h2>
+  <div class="products">
+    <div class="card">
+      <img src="images/boutique/dress1.jpg" alt="Dress 1">
+      <p>Dress 1</p>
+      <span>Contact for price</span>
+    </div>
+    <div class="card">
+      <img src="images/boutique/dress2.jpg" alt="Dress 2">
+      <p>Dress 2</p>
       <span>Contact for price</span>
     </div>
   </div>
