--- a/products.html
+++ b/products.html
@@ -18,70 +18,74 @@
   </div>
 </nav>
 
+<!-- PRODUCT CATEGORY: PATCHES -->
 <section>
   <h2>Patches</h2>
   <div class="products">
     <div class="card">
-      <img src="images/patches/lion.jpg" alt="Lion Patch">
-      <p>Lion Patch</p>
+      <img src="https://via.placeholder.com/300" alt="Patch">
+      <p>Product Name</p>
       <span>Contact for price</span>
     </div>
     <div class="card">
-      <img src="images/patches/whale.jpg" alt="Whale Patch">
-      <p>Whale Patch</p>
+      <img src="https://via.placeholder.com/300" alt="Patch">
+      <p>Product Name</p>
       <span>Contact for price</span>
     </div>
     <div class="card">
-      <img src="images/patches/flower.jpg" alt="Flower Patch">
-      <p>Flower Patch</p>
+      <img src="https://via.placeholder.com/300" alt="Patch">
+      <p>Product Name</p>
       <span>Contact for price</span>
     </div>
   </div>
 </section>
 
+<!-- PRODUCT CATEGORY: BORDERS -->
 <section>
   <h2>Borders</h2>
   <div class="products">
     <div class="card">
-      <img src="images/borders/gold.jpg" alt="Gold Border">
-      <p>Gold Border</p>
+      <img src="https://via.placeholder.com/300" alt="Border">
+      <p>Product Name</p>
       <span>Contact for price</span>
     </div>
     <div class="card">
-      <img src="images/borders/silver.jpg" alt="Silver Border">
-      <p>Silver Border</p>
+      <img src="https://via.placeholder.com/300" alt="Border">
+      <p>Product Name</p>
       <span>Contact for price</span>
     </div>
   </div>
 </section>
 
+<!-- PRODUCT CATEGORY: LACES -->
 <section>
   <h2>Laces</h2>
   <div class="products">
     <div class="card">
-      <img src="images/laces/red.jpg" alt="Red Lace">
-      <p>Red Lace</p>
+      <img src="https://via.placeholder.com/300" alt="Lace">
+      <p>Product Name</p>
       <span>Contact for price</span>
     </div>
     <div class="card">
-      <img src="images/laces/black.jpg" alt="Black Lace">
-      <p>Black Lace</p>
+      <img src="https://via.placeholder.com/300" alt="Lace">
+      <p>Product Name</p>
       <span>Contact for price</span>
     </div>
   </div>
 </section>
 
+<!-- PRODUCT CATEGORY: BOUTIQUE -->
 <section>
   <h2>Boutique Items</h2>
   <div class="products">
     <div class="card">
-      <img src="images/boutique/dress1.jpg" alt="Dress 1">
-      <p>Dress 1</p>
+      <img src="https://via.placeholder.com/300" alt="Boutique Item">
+      <p>Product Name</p>
       <span>Contact for price</span>
     </div>
     <div class="card">
-      <img src="images/boutique/dress2.jpg" alt="Dress 2">
-      <p>Dress 2</p>
+      <img src="https://via.placeholder.com/300" alt="Boutique Item">
+      <p>Product Name</p>
       <span>Contact for price</span>
     </div>
   </div>
