--- a/contact.html
+++ b/contact.html
@@ -1,41 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Contact | Basira Collection</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+<section id="contact" style="padding:40px; background:#ffffff; text-align:center;">
+  <h2>Contact Us</h2>
 
-<nav>
-  <div class="logo">Basira Collection</div>
-  <div class="nav-links">
-    <a href="index.html">Home</a>
-    <a href="products.html">Products</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </div>
-</nav>
+  <p style="font-size:18px; margin:10px 0;">
+    📞 Phone: 
+    <a href="tel:+918851240897" style="text-decoration:none; color:black;">
+      +91 98765 43210
+    </a>
+  </p>
 
-<section class="hero-orange">
-  <div class="hero-card">
-    <h1>Contact Us</h1>
-    <p class="tagline">
-      Have questions or want to place an order?  
-    </p>
-    <p style="color:#555; margin-top:15px;">
-      Message us directly on WhatsApp or email. We respond quickly to all enquiries.
-    </p>
-    <div class="actions">
-      <a href="https://wa.me/918851240897" class="btn dark">Chat on WhatsApp</a>
-    </div>
-  </div>
+  <p style="font-size:18px; margin:10px 0;">
+    💬 WhatsApp: 
+    <a href="https://wa.me/919876543210" target="_blank">
+      Chat on WhatsApp
+    </a>
+  </p>
+
+  <p style="font-size:18px; margin:10px 0;">
+    ✉️ Email: 
+    <a href="mailto:yourbusiness@gmail.com">
+      yourbusiness@gmail.com
+    </a>
+  </p>
+
 </section>
-
-<footer>
-  © 2025 Basira Collection
-</footer>
-
-</body>
-</html>
