--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,10 @@
-<section id="contact" style="padding:40px; background:#ffffff; text-align:center;">
-  <h2>Contact Us</h2>
+<section id="contact" style="padding:30px; background:#ffffff; text-align:center;">
+  <h2 style="color:#000;">Contact</h2>
 
-  <p style="font-size:18px; margin:10px 0;">
-    📞 Phone: 
-    <a href="tel:+918851240897" style="text-decoration:none; color:black;">
+  <p style="font-size:20px; color:#000;">
+    📞 Phone:
+    <a href="tel:+919876543210" style="color:#000; font-weight:bold; text-decoration:none;">
       +91 98765 43210
     </a>
   </p>
-
-  <p style="font-size:18px; margin:10px 0;">
-    💬 WhatsApp: 
-    <a href="https://wa.me/919876543210" target="_blank">
-      Chat on WhatsApp
-    </a>
-  </p>
-
-  <p style="font-size:18px; margin:10px 0;">
-    ✉️ Email: 
-    <a href="mailto:yourbusiness@gmail.com">
-      yourbusiness@gmail.com
-    </a>
-  </p>
-
 </section>
