Revise contact section with new details and format
Updated contact information and styling in contact.html.

--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,9 @@
-<section id="contact" style="padding:30px; background:#ffffff; text-align:center;">
-  <h2 style="color:#000;">Contact</h2>
+<h2>Contact Us</h2>
 
-  <p style="font-size:20px; color:#000;">
-    📞 Phone:
-    <a href="tel:+919876543210" style="color:#000; font-weight:bold; text-decoration:none;">
-      +91 98765 43210
-    </a>
-  </p>
-</section>
+<p>📞 Phone: <a href="tel:8851240897">9873766500</a></p>
+
+<p>📧 Email: <a href="mailto:sa9873766500@gmail.com">myboutique@gmail.com</a></p>
+
+<p>💬 WhatsApp:
+  <a href="https://wa.me/918851240897">Chat on WhatsApp</a>
+</p>
