Update website title and content structure

--- a/index.html
+++ b/index.html
@@ -2,46 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Basira Collection</title>
+  <title>Business Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: white;
+      color: #222;
+    }
+
+    header {
+      background: orange;
+      padding: 20px;
+      text-align: center;
+      color: white;
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    section {
+      padding: 30px 20px;
+    }
+
+    h2 {
+      color: orange;
+      margin-bottom: 10px;
+    }
+
+    .contact-box {
+      background: #fff4e6;
+      border: 2px solid orange;
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 400px;
+    }
+
+    .contact-box p {
+      font-size: 18px;
+      margin: 10px 0;
+    }
+
+    footer {
+      background: orange;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      margin-top: 30px;
+    }
+  </style>
 </head>
+
 <body>
 
-<nav>
-  <div class="logo">Basira Collection</div>
-  <div class="nav-links">
-    <a href="index.html">Home</a>
-    <a href="products.html">Products</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </div>
-</nav>
+  <header>
+    My Business Website
+  </header>
 
-<!-- ORANGE HERO -->
-<section class="hero-orange">
-  <div class="hero-card">
-    <h1>Basira Collection</h1>
-    <p class="tagline">
-      Premium Patches, Laces & Boutique Materials
+  <section>
+    <h2>About Us</h2>
+    <p>
+      We deal in patches, boutique items, laces, borders, and more.
+      Quality products at the best price.
     </p>
-    <p class="delivery">
-      🚚 Delivery all over India
-    </p>
+  </section>
 
-    <div class="actions">
-      <a href="products.html" class="btn dark">View Products</a>
-      <a href="https://wa.me/91XXXXXXXXXX" class="btn outline">Order on WhatsApp</a>
+  <section>
+    <h2>Contact Us</h2>
+
+    <div class="contact-box">
+      <p><strong>📞 Contact Number:</strong></p>
+      <p>8851240897</p>
     </div>
-  </div>
-</section>
+  </section>
 
-<footer>
-  © 2025 Basira Collection
-</footer>
+  <footer>
+    © 2025 My Business
+  </footer>
 
 </body>
 </html>
-<p style="color:black; font-size:22px; font-weight:bold;">
-  📞 +91 8851240897
-</p>
