Revamp index.html for Basira Collection branding
Updated the website's title and content to reflect the Basira Collection branding, added navigation links, and modified the hero section.

--- a/index.html
+++ b/index.html
@@ -1,85 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Business Website</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: white;
-      color: #222;
-    }
-
-    header {
-      background: orange;
-      padding: 20px;
-      text-align: center;
-      color: white;
-      font-size: 24px;
-      font-weight: bold;
-    }
-
-    section {
-      padding: 30px 20px;
-    }
-
-    h2 {
-      color: orange;
-      margin-bottom: 10px;
-    }
-
-    .contact-box {
-      background: #fff4e6;
-      border: 2px solid orange;
-      padding: 20px;
-      border-radius: 10px;
-      max-width: 400px;
-    }
-
-    .contact-box p {
-      font-size: 18px;
-      margin: 10px 0;
-    }
-
-    footer {
-      background: orange;
-      color: white;
-      text-align: center;
-      padding: 10px;
-      margin-top: 30px;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Basira Collection</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-  <header>
-    My Business Website
-  </header>
+<nav>
+  <div class="logo">Basira Collection</div>
+  <div class="nav-links">
+    <a href="index.html">Home</a>
+    <a href="products.html">Products</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </div>
+</nav>
 
-  <section>
-    <h2>About Us</h2>
-    <p>
-      We deal in patches, boutique items, laces, borders, and more.
-      Quality products at the best price.
-    </p>
-  </section>
+<!-- ORANGE HERO -->
+<section class="hero-orange">
+  <div class="hero-card">
+    <h1>Basira Collection</h1>
+    <p class="tagline">
+      Premium Patches, Laces & Boutique Materials
+    </p>
 
-  <section>
-    <h2>Contact Us</h2>
+    <!-- CONTACT NUMBER -->
+    <p class="contact-number">
+      📞 Call / WhatsApp: <a href="tel:8851240897">8851240897</a>
+    </p>
 
-    <div class="contact-box">
-      <p><strong>📞 Contact Number:</strong></p>
-      <p>8851240897</p>
-    </div>
-  </section>
+    <p class="delivery">
+      🚚 Delivery all over India
+    </p>
 
-  <footer>
-    © 2025 My Business
-  </footer>
+    <div class="actions">
+      <a href="products.html" class="btn dark">View Products</a>
+      <a href="https://wa.me/918851240897" class="btn outline">
+        Order on WhatsApp
+      </a>
+    </div>
+  </div>
+</section>
+
+<footer>
+  © 2025 Basira Collection
+</footer>
 
 </body>
 </html>
