Update product images and names in products.html

--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
   <div class="logo">Basira Collection</div>
   <div class="nav-links">
     <a href="index.html">Home</a>
-    <a href="products.html">Products</a>
+    <a href="products.html" class="active">Products</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </div>
@@ -23,18 +23,13 @@
   <h2>Patches</h2>
   <div class="products">
     <div class="card">
-      <img src="https://via.placeholder.com/300" alt="Patch">
-      <p>Product Name</p>
+      <img src="images/patches/patch1.jpg" alt="Patch 1" loading="lazy">
+      <p>Patch 1</p>
       <span>Contact for price</span>
     </div>
     <div class="card">
-      <img src="https://via.placeholder.com/300" alt="Patch">
-      <p>Product Name</p>
-      <span>Contact for price</span>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/300" alt="Patch">
-      <p>Product Name</p>
+      <img src="images/patches/patch2.jpg" alt="Patch 2" loading="lazy">
+      <p>Patch 2</p>
       <span>Contact for price</span>
     </div>
   </div>
@@ -45,13 +40,13 @@
   <h2>Borders</h2>
   <div class="products">
     <div class="card">
-      <img src="https://via.placeholder.com/300" alt="Border">
-      <p>Product Name</p>
+      <img src="images/borders/border1.jpg" alt="Border 1" loading="lazy">
+      <p>Border 1</p>
       <span>Contact for price</span>
     </div>
     <div class="card">
-      <img src="https://via.placeholder.com/300" alt="Border">
-      <p>Product Name</p>
+      <img src="images/borders/border2.jpg" alt="Border 2" loading="lazy">
+      <p>Border 2</p>
       <span>Contact for price</span>
     </div>
   </div>
@@ -62,13 +57,13 @@
   <h2>Laces</h2>
   <div class="products">
     <div class="card">
-      <img src="https://via.placeholder.com/300" alt="Lace">
-      <p>Product Name</p>
+      <img src="images/laces/lace1.jpg" alt="Lace 1" loading="lazy">
+      <p>Lace 1</p>
       <span>Contact for price</span>
     </div>
     <div class="card">
-      <img src="https://via.placeholder.com/300" alt="Lace">
-      <p>Product Name</p>
+      <img src="images/laces/lace2.jpg" alt="Lace 2" loading="lazy">
+      <p>Lace 2</p>
       <span>Contact for price</span>
     </div>
   </div>
@@ -79,13 +74,13 @@
   <h2>Boutique Items</h2>
   <div class="products">
     <div class="card">
-      <img src="https://via.placeholder.com/300" alt="Boutique Item">
-      <p>Product Name</p>
+      <img src="images/boutique/item1.jpg" alt="Boutique Item 1" loading="lazy">
+      <p>Boutique Item 1</p>
       <span>Contact for price</span>
     </div>
     <div class="card">
-      <img src="https://via.placeholder.com/300" alt="Boutique Item">
-      <p>Product Name</p>
+      <img src="images/boutique/item2.jpg" alt="Boutique Item 2" loading="lazy">
+      <p>Boutique Item 2</p>
       <span>Contact for price</span>
     </div>
   </div>
