Refactor product sections and add footer script

--- a/products.html
+++ b/products.html
@@ -18,50 +18,16 @@
   </div>
 </nav>
 
-<!-- PRODUCT CATEGORY: PATCHES -->
-<section>
-  <h2>Patches</h2>
-  <div class="products">
-    <div class="card">
-      <img src="images/patches/patch1.jpg" alt="Patch 1" loading="lazy">
-      <p>Patch 1</p>
-      <span>Contact for price</span>
-    </div>
-    <div class="card">
-      <img src="images/patches/patch2.jpg" alt="Patch 2" loading="lazy">
-      <p>Patch 2</p>
-      <span>Contact for price</span>
-    </div>
-  </div>
-</section>
+<!-- PRODUCTS AUTO LOAD BELOW -->
+<main id="product-sections"></main>
 
-<!-- PRODUCT CATEGORY: BORDERS -->
-<section>
-  <h2>Borders</h2>
-  <div class="products">
-    <div class="card">
-      <img src="images/borders/border1.jpg" alt="Border 1" loading="lazy">
-      <p>Border 1</p>
-      <span>Contact for price</span>
-    </div>
-    <div class="card">
-      <img src="images/borders/border2.jpg" alt="Border 2" loading="lazy">
-      <p>Border 2</p>
-      <span>Contact for price</span>
-    </div>
-  </div>
-</section>
+<footer>
+  © 2025 Basira Collection
+</footer>
 
-<!-- PRODUCT CATEGORY: LACES -->
-<section>
-  <h2>Laces</h2>
-  <div class="products">
-    <div class="card">
-      <img src="images/laces/lace1.jpg" alt="Lace 1" loading="lazy">
-      <p>Lace 1</p>
-      <span>Contact for price</span>
-    </div>
-    <div class="card">
+<script src="products.js"></script>
+</body>
+</html>
       <img src="images/laces/lace2.jpg" alt="Lace 2" loading="lazy">
       <p>Lace 2</p>
       <span>Contact for price</span>
